--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 .page-bg {
   position: fixed;
   inset: 0;
-  background: url("background.png") center / cover no-repeat;
+  background: url("./background.png") center / cover no-repeat;
   z-index: 0;
 }
 
